--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
     <title>Knockout : Customer banking portal</title>
     
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
     
     <script type="text/javascript" src="javascript/jquery.js"></script>
     <script type="text/javascript" src="javascript/knockout-latest.js"></script>
@@ -14,7 +14,26 @@
   </head>
   <body>
     <div class="container">
-      <!-- content -->
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<p class="navbar-text">My Bank Customer Portal</p>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active">
+							<a href="#">Home</a>
+						</li>
+						<li>
+							<a href="#">About</a>
+						</li>
+						<li>
+							<a href="#">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
     </div>
   </body>
 </html>
