--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -17,6 +17,12 @@
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 					<p class="navbar-text">My Bank Customer Portal</p>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
