Added the two panels with contact information

--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -54,7 +54,28 @@
 			<p>Content for about goes here</p>
 		</div>
 		<div id="contact" data-bind="visible: BankPortal.isActivePage('Contact')">
-			<p>Content for contact goes here</p>
+			<div id="contact">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="panel panel-default">
+							<div class="panel-heading">General Enquiries</div>
+							<div class="panel-body">
+								<p>Call us 111 1111 <br> 24 hours a day</p>
+								<p>Calling from overseas? <br> Call us: +000111 111111<br>24 hours a day</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="panel panel-default">
+							<div class="panel-heading">Lost or damaged card</div>
+							<div class="panel-body">
+								<p>Call us: 111 2222<br>24 hours a day</p>
+								<p>Calling from overseas?<br>Call us: +000111 222222<br>24 hours a day</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
     </div>
   </body>
