--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
     <title>Knockout : Customer banking portal</title>
     
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/carousel.css">
     
     <script type="text/javascript" src="javascript/jquery.js"></script>
     <script type="text/javascript" src="javascript/knockout-latest.js"></script>
@@ -51,7 +52,51 @@
 			</ul>
 		</div>
 		<div id="about" data-bind="visible: BankPortal.isActivePage('About')">
-			<p>Content for about goes here</p>
+			<div id="myBankCarousel" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#myBankCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myBankCarousel" data-slide-to="1" class=""></li>
+					<li data-target="#myBankCarousel" data-slide-to="2" class=""></li>
+				</ol>
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<div class="container">
+							<div class="carousel-caption">
+								<h1>Open an account online in minutes</h1>
+								<p>No need to visit a branch! No more waiting in lines!</p>
+								<p>
+									<a class="btn btn-default" href="#" role="button">Sign up today</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="container">
+							<div class="carousel-caption">
+								<h1>Lost your card?</h1>
+								<p>Report your lost card online and we will send you a new one!</p>
+								<p><a href="#" class="btn btn-default" role="button">Learn more</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="container">
+							<div class="carousel-caption">
+								<h1>Make a donation</h1>
+								<p>Make a donation to your favourite charity online through us.</p>
+								<p><a href="#" class="btn btn-default" role="button">Donate</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<a href="#myBankCarousel" class="left carousel-control" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>	
+				</a>
+				<a href="#myBankCarousel" class="right carousel-control" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
 		</div>
 		<div id="contact" data-bind="visible: BankPortal.isActivePage('Contact')">
 			<div id="contact">
