Begining to load data, etc

--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="javascript/jquery.js"></script>
     <script type="text/javascript" src="javascript/knockout-latest.js"></script>
     <script type="text/javascript" src="javascript/knockout.validation.js"></script>
-    <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="javascript/serverstub.js"></script>
     <script type="text/javascript" src="javascript/BankPortal.js"></script>
   </head>
   <body>
