--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -9,7 +9,8 @@
     
     <script type="text/javascript" src="javascript/jquery.js"></script>
     <script type="text/javascript" src="javascript/knockout-latest.js"></script>
-    <script type="text/javascript" src="javascript/knockout.validation.js"></script>
+	<script type="text/javascript" src="javascript/knockout.validation.js"></script>
+	<script type="text/javascript" src="javascript/ConfigureKnockout.js"></script>
 	<script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="javascript/serverstub.js"></script>
     <script type="text/javascript" src="javascript/BankPortal.js"></script>
@@ -51,6 +52,40 @@
 					<a href="#" data-bind="click: BankPortal.setActiveTab.bind($data, 'Personal')">Personal</a>
 				</li>
 			</ul>
+			<div id="accounts" data-bind="visible: BankPortal.isActiveTab('Accounts')">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">Summary</div>
+							<div class="panel-body">
+								<table class="table table-hover">
+									<thead>
+										<tr>
+											<th>#</th>
+											<th>Branch</th>
+											<th>Number</th>
+											<th>Type</th>
+											<th>Balance</th>
+										</tr>
+									</thead>
+									<tbody data-bind="foreach: BankPortal.member.accounts">
+										<tr>
+											<td data-bind="text: ($index() + 1)"></td>
+											<td data-bind="text: summary.branch"></td>
+											<td data-bind="text: summary.number"></td>
+											<td data-bind="text: summary.type"></td>
+											<td data-bind="currency: summary.balance"></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="personal" data-bind="visible: BankPortal.isActiveTab('Accounts')">
+				
+			</div>
 		</div>
 		<div id="about" data-bind="visible: BankPortal.isActivePage('About')">
 			<div id="myBankCarousel" class="carousel slide" data-ride="carousel">
