Updated to highlight the selected account

--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -69,7 +69,7 @@
 										</tr>
 									</thead>
 									<tbody data-bind="foreach: BankPortal.member.accounts">
-										<tr>
+										<tr data-bind="click: BankPortal.setSelectedAccount, css: {active: BankPortal.isSelectedAccount($data)}">
 											<td data-bind="text: ($index() + 1)"></td>
 											<td data-bind="text: summary.branch"></td>
 											<td data-bind="text: summary.number"></td>
