--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -81,6 +81,35 @@
 							</div>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">Transactions</div>
+								<div class="panel-body">
+									<table class="table">
+										<thead>
+											<tr>
+												<th>#</th>
+												<th>Date</th>
+												<th>Description</th>
+												<th>Category</th>
+												<th>Amount</th>
+											</tr>
+										</thead>
+										<tbody data-bind="foreach: BankPortal.member.selectedAccountTransactions">
+											<tr>
+												<td data-bind="text: ($index() + 1)"></td>
+												<td data-bind="text: date"></td>
+												<td data-bind="text: description"></td>
+												<td data-bind="text: category"></td>
+												<td data-bind="currency: amount"></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div id="personal" data-bind="visible: BankPortal.isActiveTab('Accounts')">
