--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -114,8 +114,71 @@
 					</div>
 				</div>
 			</div>
-			<div id="personal" data-bind="visible: BankPortal.isActiveTab('Accounts')">
-				
+			<div id="personal" data-bind="visible: BankPortal.isActiveTab('Personal')">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">Personal Details</div>
+							<div class="panel-body">
+								<form>
+									<fieldset>
+										<div class="row">
+											<div class="col-md-6">
+												<div class="form-group">
+													<label for="firstNameInput">First Name</label>
+													<input type="text" name="firstNameInput" id="firstNameInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.firstName">
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group"><label for="lastNameInput">Last Name</label>
+													<input type="text" name="lastNameInput" id="lastNameInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.lastName">
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-6">
+												<div class="form-group">
+													<label for="phoneNumberInput">Phone Number</label>
+													<input type="text" name="phoneNumberInput" id="phoneNumberInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.contactDetails.phoneNumber">
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group">
+													<label for="emailInput">Email</label>
+													<input type="text" name="emailInput" id="emailInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.contactDetails.emailAddress">
+												</div>
+											</div>
+										</div>
+									</fieldset>
+									<h3>Address</h3>
+									<fieldset>
+										<div class="row">
+											<div class="col-md-12">
+												<div class="form-group">
+													<label for="streetAddressInput">Street Address</label>
+													<input type="text" name="streetAddressInput" id="streetAddressInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.address.street">
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-8">
+												<div class="form-group"><label for="cityInput">City</label><input type="text" name="cityInput" id="cityInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.address.city"></div>
+											</div>
+											<div class="col-md-4">
+												<div class="form-group"><label for="postalCodeInput">Postal Code</label><input type="text" name="postalCodeInput" id="postalCodeInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.address.postalCode"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-8">
+												<div class="form-group"><label for="countryInput">Country</label><input type="text" name="countryInput" id="countryInput" class="form-control" data-bind="enable: false, value: BankPortal.member.personal.address.country"></div>
+											</div>
+										</div>
+									</fieldset>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div id="about" data-bind="visible: BankPortal.isActivePage('About')">
