Updated the loading of data to commit the first initial value from the retrieval.

--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -124,7 +124,7 @@
 									<div class="alert alert-success" role="alert" data-bind="visible:BankPortal.showPersonalInformationEditDone">
 										<strong>Done! </strong>Personal information updated.
 									</div>
-									<div class="alert alert-warning" role="alert" data-bind="visible: BankPortal.showPersonalInformationEditCancel"><strong>Cancelled! </strong>Edit cancelled and values revereted</div>
+									<div class="alert alert-warning" role="alert" data-bind="visible: BankPortal.showPersonalInformationEditCancel"><strong>Cancelled! </strong>Edit cancelled and values reverted</div>
 									<fieldset>
 										<div class="row">
 											<div class="col-md-6">
