--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -127,26 +127,26 @@
 									<div class="alert alert-warning" role="alert" data-bind="visible: BankPortal.showPersonalInformationEditCancel"><strong>Cancelled! </strong>Edit cancelled and values reverted</div>
 									<fieldset>
 										<div class="row">
-											<div class="col-md-6">
+											<div class="col-md-6" data-bind="validationElement: BankPortal.member.personal.firstName">
 												<div class="form-group">
 													<label for="firstNameInput">First Name</label>
 													<input type="text" name="firstNameInput" id="firstNameInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.firstName">
 												</div>
 											</div>
-											<div class="col-md-6">
+											<div class="col-md-6" data-bind="validationElement: BankPortal.member.personal.lastName">
 												<div class="form-group"><label for="lastNameInput">Last Name</label>
 													<input type="text" name="lastNameInput" id="lastNameInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.lastName">
 												</div>
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-md-6">
+											<div class="col-md-6" data-bind="validationElement: BankPortal.member.personal.contactDetails.phoneNumber">
 												<div class="form-group">
 													<label for="phoneNumberInput">Phone Number</label>
 													<input type="text" name="phoneNumberInput" id="phoneNumberInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.contactDetails.phoneNumber">
 												</div>
 											</div>
-											<div class="col-md-6">
+											<div class="col-md-6" data-bind="validationElement: BankPortal.member.personal.contactDetails.emailAddress">
 												<div class="form-group">
 													<label for="emailInput">Email</label>
 													<input type="text" name="emailInput" id="emailInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.contactDetails.emailAddress">
@@ -157,7 +157,7 @@
 									<h3>Address</h3>
 									<fieldset>
 										<div class="row">
-											<div class="col-md-12">
+											<div class="col-md-12" data-bind="validationElement: BankPortal.member.personal.address.street">
 												<div class="form-group">
 													<label for="streetAddressInput">Street Address</label>
 													<input type="text" name="streetAddressInput" id="streetAddressInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.address.street">
@@ -165,15 +165,15 @@
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-md-8">
+											<div class="col-md-8" data-bind="validationElement: BankPortal.member.personal.address.city">
 												<div class="form-group"><label for="cityInput">City</label><input type="text" name="cityInput" id="cityInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.address.city"></div>
 											</div>
-											<div class="col-md-4">
+											<div class="col-md-4" data-bind="validationElement: BankPortal.member.personal.address.postalCode">
 												<div class="form-group"><label for="postalCodeInput">Postal Code</label><input type="text" name="postalCodeInput" id="postalCodeInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.address.postalCode"></div>
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-md-8">
+											<div class="col-md-8" data-bind="validationElement: BankPortal.member.personal.address.country">
 												<div class="form-group"><label for="countryInput">Country</label><input type="text" name="countryInput" id="countryInput" class="form-control" data-bind="enable: BankPortal.personalInformationEditMode, value: BankPortal.member.personal.address.country"></div>
 											</div>
 										</div>
