Started the panel

--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -191,7 +191,16 @@
 				</div>
 			</div>
 			<div id="transfers" data-bind="visible: BankPortal.isActiveTab('Transfers')">
-				Transfer pane
+				<div class="row">
+					<div class="col-md-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">Transfer Funds</div>
+							<div class="panel-body">
+								<p>Transfer Funds</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div id="about" data-bind="visible: BankPortal.isActivePage('About')">
