--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -13,12 +13,24 @@
 	<script type="text/javascript" src="javascript/knockout.validation.js"></script>
 	<script type="text/javascript" src="javascript/ConfigureKnockout.js"></script>
 	<script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="javascript/jwt.js"></script>
 	<script type="text/javascript" src="javascript/serverstub.js"></script>
 	<script type="text/javascript" src="javascript/Wizard.js"></script>
+	<script type="text/javascript" src="javascript/Authenticator.js"></script>
     <script type="text/javascript" src="javascript/BankPortal.js"></script>
   </head>
   <body>
-    <div class="container">
+	<div class="container" data-bind="ifnot: BankPortal.authenticator.isAuthenticated">
+		<form class="form-login" data-bind="submit: BankPortal.authenticator.login">
+			<h2 class="form-login-heading">Please Sign In</h2>
+			<label for="inputUserName" class="sr-only">User name</label>
+			<input type="text" name="inputUserName" id="inputUserName" class="form-control" placeholder="User Name" data-bind="value: BankPortal.authenticator.credentials.userName">
+			<label for="inputPassword" class="sr-only">Password</label>
+			<input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" data-bind="value: BankPortal.authenticator.credentials.password">
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		</form>
+	</div>
+    <div class="container" data-bind="if: BankPortal.authenticator.isAuthenticated">
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
