--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -32,6 +32,9 @@
 				<input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" data-bind="value: BankPortal.authenticator.credentials.password">
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+			<div class="alert alert-danger" role="alert" data-bind="visible: BankPortal.authenticator.showAuthenticationFailed">
+				<strong>Login failed! </strong> Invalid user name or password
+			</div>
 		</form>
 	</div>
     <div class="container" data-bind="if: BankPortal.authenticator.isAuthenticated">
