Finish displaying the logged in user.

--- a/WebContent/bankportal.html
+++ b/WebContent/bankportal.html
@@ -61,6 +61,9 @@
 							<a href="#" data-bind="click: BankPortal.setActivePage.bind($data, 'Contact')">Contact</a>
 						</li>
 					</ul>
+					<ul class="nav navbar navbar-right">
+						<li><span class="navbar-text" data-bind="text: BankPortal.authenticator.loggedInUser"></span></li>
+					</ul>
 				</div>
 			</div>
 		</nav>
